--- a/_config.yml
+++ b/_config.yml
@@ -6,34 +6,33 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Jooyeon Jeong
+title: PhD Candidate in Physical Design of Very Large Scale Integrated (VLSI) Circuits
+email: jooyeon@snucad.snu.ac.kr / jooyeon37@snu.ac.kr 
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+#twitter_username: facespics
+#github_username:  sproogen
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: jameswgrant
-linkedin_username: jameswgrant
+#instagram_username: jameswgrant
+#linkedin_username: jameswgrant
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: globalmtb
+#youtube_username: globalmtb
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links:
-- title: itsgoingto.be
-  icon: fas fa-globe
-  url: https://www.itsgoingto.be
+#additional_links:
+#- title: itsgoingto.be
+#  icon: fas fa-globe
+#  url: https://www.itsgoingto.be
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
@@ -48,30 +47,54 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, I'm Jooyeon Jeong. My research in digital semiconductor design focuses on optimizing PPA(Power, Performance, Area) in the physical design stage, including standard cell design optimization, chip layout optimization and design-technology co-optimization, which considers both standard cells and chip layouts simultaneously. In my remaining time before graduation, I plan to advance my research by applying AI to improve.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  I am most skilled in: <mark>Algorithm</mark>, <mark>Optimization</mark> and <mark>Electronic Design Automation</mark>
 
 content:
-  - title: Projects # Title for the section
+  - title: Papers # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
+        title: 2024 Design Automation Conference (DAC)
+        #link: github.com/sproogen
         # link_text: Project Website
-        additional_links:
-          - title:  sproogen/modern-resume-theme
-            icon: fab fa-github
-            url: github.com/sproogen/modern-resume-theme
+        #additional_links:
+          #- title:  sproogen/modern-resume-theme
+            #icon: fab fa-github
+            #url: github.com/sproogen/modern-resume-theme
           # - title:  Github page for project (eg. sproogen/modern-resume-theme)
           #   icon: fab fa-github
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+        #quote: >
+        #  This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+          Jooyeon Jeong and Taewhan Kim. “Binding Multi-bit Flip-flop Cells through Design and Technology Co-optimization.” 
+      - layout: top-middle
+        title: 2024 Integration, the VLSI Journal
+        description: | # this will include new lines to allow paragraphs
+          Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
 
+      - layout: top-middle
+        title: 2024 Integration, the VLSI Journal
+        description: | # this will include new lines to allow paragraphs
+          Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
+      - layout: top-middle
+        title: 2024 Integration, the VLSI Journal
+        description: | # this will include new lines to allow paragraphs
+          Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
+      - layout: top-middle
+        title: 2024 Integration, the VLSI Journal
+        description: | # this will include new lines to allow paragraphs
+          Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
+      - layout: top-middle
+        title: 2024 Integration, the VLSI Journal
+        description: | # this will include new lines to allow paragraphs
+          Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
+      - layout: top-middle
+        title: 2024 Integration, the VLSI Journal
+        description: | # this will include new lines to allow paragraphs
+          Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
