--- a/_config.yml
+++ b/_config.yml
@@ -74,67 +74,135 @@ content:
         title: 2024 Integration, the VLSI Journal
         description: | # this will include new lines to allow paragraphs
           Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
-
       - layout: top-middle
-        title: 2024 Integration, the VLSI Journal
+        title: 2023 Design, Automation and Test in Europe Conference (DATE)
         description: | # this will include new lines to allow paragraphs
-          Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
+          Jooyeon Jeong, Sehyeon Chung, Kyeongrok Jo, and Taewhan Kim. “Synthesis and Utilization of Standard Cells Amenable to Gear Ratio of Gate-Metal Pitches for Improving Pin Accessibility.”  
       - layout: top-middle
-        title: 2024 Integration, the VLSI Journal
+        title: 2022 International Symposium on Low Power Electronics and Design (ISLPED)
         description: | # this will include new lines to allow paragraphs
-          Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
+          Sehyeon Chung, Jooyeon Jeong, and Taewhan Kim. “Improving Performance and Power by Co-Optimizing Middle-of-Line Routing, Pin Pattern Generation, and Contact over Active Gates in Standard Cell Layout Synthesis.”  
       - layout: top-middle
-        title: 2024 Integration, the VLSI Journal
+        title: 2021 International SoC Design Conference (ISOCC)
         description: | # this will include new lines to allow paragraphs
-          Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
+          Heechun Park, Kyungjoon Chang, Jooyeon Jeong, Jaehoon Ahn, Ki-Seok Chung, and Taewhan Kim. “Challenges on DTCO Methodology Towards Deep Submicron Interconnect Technology.”  
       - layout: top-middle
-        title: 2024 Integration, the VLSI Journal
+        title: 2021 Midwest Symposium on Circuits and Systems (MWSCAS)
         description: | # this will include new lines to allow paragraphs
-          Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
+          Jooyeon Jeong and Taewhan Kim. “Utilizing Middle-of-Line Resource in Filler Cells for Fixing Routing Failures.”  
       - layout: top-middle
-        title: 2024 Integration, the VLSI Journal
+        title: 2021 Midwest Symposium on Circuits and Systems (MWSCAS)
         description: | # this will include new lines to allow paragraphs
-          Jooyeon Jeong and Taewhan Kim. “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
-  - title: Experience # Title for the section
+          Eunsol Jeong, Heechun Park, Jooyeon Jeong, and Taewhan Kim. “Minimum Implant Area-Aware Threshold Voltage Refinement in Pre-Placement.”  
+          
+  - title: Work Experiences # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        title: Local Arrangement Co-Chairs for ASP-DAC conference
+        #sub_title: Senior Network System Administrator
+        caption: January 2024
+        #quote: >
+          #Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
-
+            29th Asia and South Pacific Design Automation Conference
+      - layout: left
+        title: Intern for Samsung Semiconductor System LSI
+        caption: November 2022 - December 2022
+        description: | # this will include new lines to allow paragraphs
+            Conducted research on the utilization of mixed voltage threshold in standard cells for advanced circuit
+            
+  - title: Projects and Collaborations
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: Samsung Electronics, Memory division
+        caption: April 2022 - January 2024
+        description: | # this will include new lines to allow paragraphs
+            Memory-oriented standard cell exploration methodology for Design-Technology Co-Optimization(DTCO)
+      - layout: left
+        title: Samsung Electronics, LSI division
+        caption: May 2022 - January 2024
+        description: | # this will include new lines to allow paragraphs
+            Design Optimization and Algorithm Development Using Non-Uniform Height Cell
+      - layout: left
+        title: Samsung Electronics, Foundry division
+        caption: January 2021 - June 2023
+        description: | # this will include new lines to allow paragraphs
+            Investigated the integration of advanced DTCO methodologies to optimize standard cell technology, enhancing Power, Performance, and Area (PPA) of final chip designs
+      - layout: left
+        title: Samsung Electronics, SAIT division
+        caption: September 2023
+        description: | # this will include new lines to allow paragraphs
+            Explored innovative solutions for physical design challenges in semiconductor manufacturing through the application of artificial intelligence
+      - layout: left
+        title: Cadence
+        caption: November 2022
+        description: | # this will include new lines to allow paragraphs
+            Engaged in productive discussions and shared research findings with Cadence headquarters
+            
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
+        title: Seoul National University
+        caption: 2020 - 2025
+        sub_title: M.S. & Ph.D Department of Electrical and Computer Engineering
+        #quote: >
+        #  Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+        #description: | # this will include new lines to allow paragraphs
+        #  During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+
+        #  I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+      - layout: left
+        title: Chung-ang University
+        caption: 2016 - 2020
+        sub_title: B.S. School of Electrical and Electronics Engineering
         quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-        description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+         Scholarships : 
+        description:
+        - Entered as the class valedictorian         
+        - Full-tuition scholarship for four years (2016-2020)
+        - Academic Excellence Scholarship (2016-2018)
+        - Departmental Scholarship (2016-2019)
+        - Summa Cum Laude Graduate
 
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
-
-  - title: A Little More About Me
+  - title: Research Interest
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+      - AI, Machine learning, Deep learning
+      - Very-Large-Scale Integration (VLSI)
+      - Physical design
+      - Optimization                                                                                                                      
+      - Algorithm
+      
+  - title: Skills
+    layout: text
+    content: | # this will include new lines to allow paragraphs
+      - Python
+      - C/C++ 
+      - SKILL language in Cadence 
+      - AI, Machine learning, Deep learning                                                                                                                       
+      - TOEIC : 965
+      - TOEIC Speaking : level 7
+      - OPIC : IH
+      
+  - title: TA Experiences
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: Digital Logic Design and Lab
+        caption: Fall 2023, Fall 2021, Summer 2021, Fall 2020
+        description: | # this will include new lines to allow paragraphs
+            Learn basic theories of logic design including Boolean algebra and logic minimization and operation principles of logic devices. It also covers design methods for combinational logic and sequential logic
 
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
-
+    content: | # this will include new lines to allow paragraphs
+      - AI, Machine learning, Deep learning
+      - Very-Large-Scale Integration (VLSI)
+      - Physical design
+      - Optimization                                                                                                                      
+      - Algorithm
+      
 # Footer
 footer_show_references: true
 # references_title: References on request (Override references text)
