--- a/_config.yml
+++ b/_config.yml
@@ -69,36 +69,43 @@ content:
         #quote: >
         #  This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
         description: | # this will include new lines to allow paragraphs
+        - layout: middle        
           Jooyeon Jeong and Taewhan Kim. 
           “Binding Multi-bit Flip-flop Cells through Design and Technology Co-optimization.” 
       - layout: top-middle
         title: 2024 Integration, the VLSI Journal
         description: | # this will include new lines to allow paragraphs
+        - layout: middle        
           Jooyeon Jeong and Taewhan Kim. 
           “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
       - layout: top-middle
         title: 2023 Design, Automation and Test in Europe Conference (DATE)
         description: | # this will include new lines to allow paragraphs
+        - layout: middle        
           Jooyeon Jeong, Sehyeon Chung, Kyeongrok Jo, and Taewhan Kim. 
           “Synthesis and Utilization of Standard Cells Amenable to Gear Ratio of Gate-Metal Pitches for Improving Pin Accessibility.”  
       - layout: top-middle
         title: 2022 International Symposium on Low Power Electronics and Design (ISLPED)
         description: | # this will include new lines to allow paragraphs
+          - layout: middle
           Sehyeon Chung, Jooyeon Jeong, and Taewhan Kim. 
           “Improving Performance and Power by Co-Optimizing Middle-of-Line Routing, Pin Pattern Generation, and Contact over Active Gates in Standard Cell Layout Synthesis.”  
       - layout: top-middle
         title: 2021 International SoC Design Conference (ISOCC)
         description: | # this will include new lines to allow paragraphs
+        - layout: middle
           Heechun Park, Kyungjoon Chang, Jooyeon Jeong, Jaehoon Ahn, Ki-Seok Chung, and Taewhan Kim. 
           “Challenges on DTCO Methodology Towards Deep Submicron Interconnect Technology.”  
       - layout: top-middle
         title: 2021 Midwest Symposium on Circuits and Systems (MWSCAS)
         description: | # this will include new lines to allow paragraphs
+        - layout: middle        
           Jooyeon Jeong and Taewhan Kim. 
           “Utilizing Middle-of-Line Resource in Filler Cells for Fixing Routing Failures.”  
       - layout: top-middle
         title: 2021 Midwest Symposium on Circuits and Systems (MWSCAS)
         description: | # this will include new lines to allow paragraphs
+        - layout: middle        
           Eunsol Jeong, Heechun Park, Jooyeon Jeong, and Taewhan Kim. 
           “Minimum Implant Area-Aware Threshold Voltage Refinement in Pre-Placement.”  
           
@@ -157,7 +164,7 @@ content:
         caption: 2020 - 2025
         sub_title: M.S. & Ph.D Department of Electrical and Computer Engineering
         quote: >
-          In my remaining time before graduation, I plan to advance my research by applying AI to improve.
+          As a graduate student, I specialized in the physical design of digital circuits within semiconductor design. In my remaining time before graduation, I plan to advance my research by applying AI to improve.
         #description: | # this will include new lines to allow paragraphs
         #  During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
         #  I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
@@ -166,11 +173,7 @@ content:
         caption: 2016 - 2020
         sub_title: B.S. School of Electrical and Electronics Engineering
         quote: >
-          - Entered as the class valedictorian         
-          - Full-tuition scholarship for four years (2016-2020)
-          - Academic Excellence Scholarship (2016-2018)
-          - Departmental Scholarship (2016-2019)
-          - Summa Cum Laude Graduate
+          Entered as the class valedictorian / Full-tuition scholarship for four years (2016-2020) / Academic Excellence Scholarship (2016-2018) / Departmental Scholarship (2016-2019) / Summa Cum Laude Graduate
 
   - title: Research Interest
     layout: text
@@ -196,7 +199,7 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: middle
-        title: Digital Logic Design and Lab
+        title: Digital Logic Design
         caption: Fall 2023, Fall 2021, Summer 2021, Fall 2020
         description: | # this will include new lines to allow paragraphs
             Learn basic theories of logic design including Boolean algebra and logic minimization and operation principles of logic devices. It also covers design methods for combinational logic and sequential logic
