--- a/_config.yml
+++ b/_config.yml
@@ -58,9 +58,8 @@ content:
       - layout: top-middle
         title: 2024 Design Automation Conference (DAC)
         description: | # this will include new lines to allow paragraphs       
-        rows:
-          - Jooyeon Jeong and Taewhan Kim. 
-          - “Binding Multi-bit Flip-flop Cells through Design and Technology Co-optimization.” 
+          Jooyeon Jeong and Taewhan Kim. 
+          “Binding Multi-bit Flip-flop Cells through Design and Technology Co-optimization.” 
       - layout: top-middle
         title: 2024 Integration, the VLSI Journal
         description: | # this will include new lines to allow paragraphs   
