--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,10 @@ content:
       - layout: top-middle
         title: 2024 Design Automation Conference (DAC)
         description: | # this will include new lines to allow paragraphs       
-          Jooyeon Jeong and Taewhan Kim. 
+        <div style="text-align: center;">
+          Jooyeon Jeong and Taewhan Kim. <br>
           “Binding Multi-bit Flip-flop Cells through Design and Technology Co-optimization.” 
+        </div>
       - layout: top-middle
         title: 2024 Integration, the VLSI Journal
         description: | # this will include new lines to allow paragraphs   
@@ -68,10 +70,8 @@ content:
       - layout: top-middle
         title: 2023 Design, Automation and Test in Europe Conference (DATE)
         description: | # this will include new lines to allow paragraphs
-        <div style="text-align: center;">
-          Jooyeon Jeong, Sehyeon Chung, Kyeongrok Jo, and Taewhan Kim. <br>
+          Jooyeon Jeong, Sehyeon Chung, Kyeongrok Jo, and Taewhan Kim.
           “Synthesis and Utilization of Standard Cells Amenable to Gear Ratio of Gate-Metal Pitches for Improving Pin Accessibility.”  
-        </div>
       - layout: top-middle
         title: 2022 International Symposium on Low Power Electronics and Design (ISLPED)
         description: | # this will include new lines to allow paragraphs
