--- a/_config.yml
+++ b/_config.yml
@@ -55,37 +55,37 @@ content:
   - title: Papers # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: top-middle
+      - layout: left
         title: 2024 Design Automation Conference (DAC)
         description: | # this will include new lines to allow paragraphs       
           Jooyeon Jeong and Taewhan Kim. <br>
           “Binding Multi-bit Flip-flop Cells through Design and Technology Co-optimization.” 
-      - layout: top-middle
+      - layout: left
         title: 2024 Integration, the VLSI Journal
         description: | # this will include new lines to allow paragraphs   
           Jooyeon Jeong and Taewhan Kim. <br>
           “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
-      - layout: top-middle
+      - layout: left
         title: 2023 Design, Automation and Test in Europe Conference (DATE)
         description: | # this will include new lines to allow paragraphs
           Jooyeon Jeong, Sehyeon Chung, Kyeongrok Jo, and Taewhan Kim. <br>
           “Synthesis and Utilization of Standard Cells Amenable to Gear Ratio of Gate-Metal Pitches for Improving Pin Accessibility.”  
-      - layout: top-middle
+      - layout: left
         title: 2022 International Symposium on Low Power Electronics and Design (ISLPED)
         description: | # this will include new lines to allow paragraphs
           Sehyeon Chung, Jooyeon Jeong, and Taewhan Kim. <br>
           “Improving Performance and Power by Co-Optimizing Middle-of-Line Routing, Pin Pattern Generation, and Contact over Active Gates in Standard Cell Layout Synthesis.”  
-      - layout: top-middle
+      - layout: left
         title: 2021 International SoC Design Conference (ISOCC)
         description: | # this will include new lines to allow paragraphs
           Heechun Park, Kyungjoon Chang, Jooyeon Jeong, Jaehoon Ahn, Ki-Seok Chung, and Taewhan Kim. <br>
           “Challenges on DTCO Methodology Towards Deep Submicron Interconnect Technology.”  
-      - layout: top-middle
+      - layout: left
         title: 2021 Midwest Symposium on Circuits and Systems (MWSCAS)
         description: | # this will include new lines to allow paragraphs      
           Jooyeon Jeong and Taewhan Kim. <br>
           “Utilizing Middle-of-Line Resource in Filler Cells for Fixing Routing Failures.”  
-      - layout: top-middle
+      - layout: left
         title: 2021 Midwest Symposium on Circuits and Systems (MWSCAS)
         description: | # this will include new lines to allow paragraphs
           Eunsol Jeong, Heechun Park, Jooyeon Jeong, and Taewhan Kim. <br>
