--- a/_config.yml
+++ b/_config.yml
@@ -56,37 +56,44 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: 2024 Design Automation Conference (DAC)
+        title: 24'DAC
+        sub_title: Design Automation Conference 
         description: | # this will include new lines to allow paragraphs       
           Jooyeon Jeong and Taewhan Kim. <br>
           “Binding Multi-bit Flip-flop Cells through Design and Technology Co-optimization.” 
       - layout: left
-        title: 2024 Integration, the VLSI Journal
+        title: 24'Integration
+        sub_title: Integration, the VLSI Journal
         description: | # this will include new lines to allow paragraphs   
           Jooyeon Jeong and Taewhan Kim. <br>
           “Placement Legalization for Heterogeneous Cells of Non-Integer Multiple-Heights.”  
       - layout: left
-        title: 2023 Design, Automation and Test in Europe Conference (DATE)
+        title: 23'DATE
+        sub_title: Design, Automation and Test in Europe Conference
         description: | # this will include new lines to allow paragraphs
           Jooyeon Jeong, Sehyeon Chung, Kyeongrok Jo, and Taewhan Kim. <br>
           “Synthesis and Utilization of Standard Cells Amenable to Gear Ratio of Gate-Metal Pitches for Improving Pin Accessibility.”  
       - layout: left
-        title: 2022 International Symposium on Low Power Electronics and Design (ISLPED)
+        title: 22'ISLPED
+        sub_title: International Symposium on Low Power Electronics and Design
         description: | # this will include new lines to allow paragraphs
           Sehyeon Chung, Jooyeon Jeong, and Taewhan Kim. <br>
           “Improving Performance and Power by Co-Optimizing Middle-of-Line Routing, Pin Pattern Generation, and Contact over Active Gates in Standard Cell Layout Synthesis.”  
       - layout: left
-        title: 2021 International SoC Design Conference (ISOCC)
+        title: 21'ISOCC
+        sub_title: International SoC Design Conference
         description: | # this will include new lines to allow paragraphs
           Heechun Park, Kyungjoon Chang, Jooyeon Jeong, Jaehoon Ahn, Ki-Seok Chung, and Taewhan Kim. <br>
           “Challenges on DTCO Methodology Towards Deep Submicron Interconnect Technology.”  
       - layout: left
-        title: 2021 Midwest Symposium on Circuits and Systems (MWSCAS)
+        title: 21'MWSCAS
+        sub_title: Midwest Symposium on Circuits and Systems
         description: | # this will include new lines to allow paragraphs      
           Jooyeon Jeong and Taewhan Kim. <br>
           “Utilizing Middle-of-Line Resource in Filler Cells for Fixing Routing Failures.”  
       - layout: left
-        title: 2021 Midwest Symposium on Circuits and Systems (MWSCAS)
+        title: 21'MWSCAS
+        sub_title: Midwest Symposium on Circuits and Systems
         description: | # this will include new lines to allow paragraphs
           Eunsol Jeong, Heechun Park, Jooyeon Jeong, and Taewhan Kim. <br>
           “Minimum Implant Area-Aware Threshold Voltage Refinement in Pre-Placement.”  
