--- a/_config.yml
+++ b/_config.yml
@@ -160,7 +160,14 @@ content:
         sub_title: B.S. School of Electrical and Electronics Engineering
         quote: >
           Entered as the class valedictorian / Full-tuition scholarship for four years (2016-2020) / <br> Academic Excellence Scholarship (2016-2018) / Departmental Scholarship (2016-2019) / Summa Cum Laude Graduate
-
+ 
+  - title: Patent
+      - layout: left
+        title: Inventor
+        sub_title: Jooyeon Jeong and Taewhan Kim 
+        description: | # this will include new lines to allow paragraphs       
+          Non-Rectangular Multi-bit Flip-flop Composed of Flip-flops with Various Drive Strength
+      
   - title: Research Interest
     layout: text
     content: | # this will include new lines to allow paragraphs
