--- a/_config.yml
+++ b/_config.yml
@@ -161,7 +161,7 @@ content:
         quote: >
           Entered as the class valedictorian / Full-tuition scholarship for four years (2016-2020) / <br> Academic Excellence Scholarship (2016-2018) / Departmental Scholarship (2016-2019) / Summa Cum Laude Graduate
  
-  - title: Patent
+  - title: Patent (ongoing)
       - layout: left
         title: Inventor
         sub_title: Jooyeon Jeong and Taewhan Kim 
