--- a/_config.yml
+++ b/_config.yml
@@ -162,10 +162,11 @@ content:
           Entered as the class valedictorian / Full-tuition scholarship for four years (2016-2020) / <br> Academic Excellence Scholarship (2016-2018) / Departmental Scholarship (2016-2019) / Summa Cum Laude Graduate
  
   - title: Patent (ongoing)
-      - layout: left
+      - layout: list
         title: Inventor
+        caption: 2024
         sub_title: Jooyeon Jeong and Taewhan Kim 
-        description: | # this will include new lines to allow paragraphs       
+        quote: >     
           Non-Rectangular Multi-bit Flip-flop Composed of Flip-flops with Various Drive Strength
       
   - title: Research Interest
