--- a/_config.yml
+++ b/_config.yml
@@ -162,7 +162,9 @@ content:
           Entered as the class valedictorian / Full-tuition scholarship for four years (2016-2020) / <br> Academic Excellence Scholarship (2016-2018) / Departmental Scholarship (2016-2019) / Summa Cum Laude Graduate
  
   - title: Patent (ongoing)
-      - layout: list
+    layout: list
+    content:
+      - layout: left    
         title: Inventor
         caption: 2024
         sub_title: Jooyeon Jeong and Taewhan Kim 
