--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ version: 2
 name: Jooyeon Jeong
 title: PhD Candidate in Physical Design of Very Large Scale Integrated (VLSI) Circuits
 email: jooyeon@snucad.snu.ac.kr / jooyeon37@snu.ac.kr 
+linkedin: https://www.linkedin.com/in/jooyeon-jeong/
 
 # Dark Mode (true/false/never)
 darkmode: false
