--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ darkmode: false
 # facebook_username: jekyll
 # flickr_username: jekyll
 #instagram_username: jameswgrant
-linkedin: https://www.linkedin.com/in/jooyeon-jeong/
+#linkedin_username: https://www.linkedin.com/in/jooyeon-jeong/
+linkedin_username: jooyeon-jeong
 # xing_username: jekyll
 # pinterest_username: jekyll
 #youtube_username: globalmtb
