--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,12 @@ content:
         caption: November 2022 - December 2022
         description: | # this will include new lines to allow paragraphs
             Conducted research on the utilization of mixed voltage threshold in standard cells for advanced circuit
-            
+      - layout: left
+        title: Samsung Electronics
+        sub_title: TA
+        caption: October 17, 2024
+        description: | # this will include new lines to allow paragraphs
+            Conducted training on the overall usage of EDA tools for employees at Samsung Electronics. Particularly focused on hands-on exercises using multi-bit flip-flops.            
   - title: Projects and Collaborations
     layout: list # Type of content section (list/text)
     content:
@@ -198,6 +203,13 @@ content:
         caption: Fall 2023, Fall 2021, Summer 2021, Fall 2020
         description: | # this will include new lines to allow paragraphs
             Learn basic theories of logic design including Boolean algebra and logic minimization and operation principles of logic devices. It also covers design methods for combinational logic and sequential logic
+      - layout: middle
+        title: fundamentals of algorithms
+        caption: Fall 2024
+        description: | # this will include new lines to allow paragraphs
+            Learn various algorithms that are essential to analyze and solve complex problems systematically.
+
+            
 
 # Footer
 footer_show_references: true
