--- a/_config.yml
+++ b/_config.yml
@@ -55,26 +55,27 @@ about_content: | # this will include new lines to allow paragraphs
 
 content:
   - title: Education and Employment
-    layout: list # Type of content section (list/text)
+    layout: list
     content:
       - layout: left
         title: Postdoc
         sub_title: 2025-
-        description: | # this will include new lines to allow paragraphs       
+        description: |
           University of California, Los Angeles
           Electrical and Computer Engineering
       - layout: left
         title: Ph. D
         sub_title: 2020-2025 
-        description: | # this will include new lines to allow paragraphs       
+        description: |
           Seoul National University
           Electrical and Computer Engineering
-        - layout: left
+      - layout: left
         title: Bachelor
         sub_title: 2016-2020
-        description: | # this will include new lines to allow paragraphs       
+        description: |
           Chung-ang University
-          Electerical and Electronics Engineering
+          Electrical and Electronics Engineering
+
   - title: Papers # Title for the section
     layout: list # Type of content section (list/text)
     content:
